--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-  <title>??? Enter YOUR TITLE HERE</title>
+  <title>Justin Github</title>
 
  
   <!-- Bootstrap -->
@@ -76,7 +76,7 @@
     <div class="row">
       <div class="col-md-4">
         <h2>About me</h2>
-        <img src="http://100-pics.net/images/answers/en/movieheroes/movieheroes_30145_618109.jpeg" class="img-circle img-responsive" alt="Shrek">
+        <img>
         <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
         <p><a class="btn btn-default" href="#" role="button">View details »</a></p>
       </div>
