--- a/index.html
+++ b/index.html
@@ -25,12 +25,13 @@
   <link rel="shortcut icon" href="/path/to/icons/favicon.ico">
   <link rel="icon" type="image/png" href="/path/to/icons/favicon-192x192.png" sizes="192x192">
   <link rel="apple-touch-icon" sizes="180x180" href="/path/to/icons/apple-touch-icon-180x180.png">
+
 </head>
 
 
 <body>
 
-  <nav class="navbar navbar-inverse navbar-fixed-top">
+<!--   <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -48,13 +49,12 @@
           <li><a href="#contact">Contact</a></li>
         </ul>
       </div>
-      <!--/.nav-collapse -->
     </div>
-  </nav>
+  </nav> -->
 
 
   <div class="container">
-    <h1>Hello World !</h1>
+    <h1>JUSTIN HEADER</h1>
 
     <!-- Example row of columns -->
     <div class="row">
