--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     <![endif]-->
 
   <!-- Link to Font Awesome http://fontawesome.io/ -->
-  <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<!--   <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
   <!-- favicon - ref: http://stackoverflow.com/questions/25952907/favicon-ico-vs-link-rel-shortcut-icon -->
-  <link rel="shortcut icon" href="/path/to/icons/favicon.ico">
+<!--   <link rel="shortcut icon" href="/path/to/icons/favicon.ico">
   <link rel="icon" type="image/png" href="/path/to/icons/favicon-192x192.png" sizes="192x192">
-  <link rel="apple-touch-icon" sizes="180x180" href="/path/to/icons/apple-touch-icon-180x180.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/path/to/icons/apple-touch-icon-180x180.png"> -->
 
 </head>
 
@@ -61,20 +61,20 @@
       <div class="col-md-4">
         <h2>About me</h2>
         <img>
-        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+        <p>LOLOLLOLLOLLLLLOL </p>
         <p><a class="btn btn-default" href="#" role="button">View details »</a></p>
       </div>
 
       <div class="col-md-4">
-        <h2>Heading</h2>
+        <h2> NOT Heading</h2>
         <i class="fa fa-graduation-cap fa-5x" aria-hidden="true"></i>
-        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+        <p>The Next column Lies</p>
         <p><a class="btn btn-default" href="#" role="button">View details »</a></p>
       </div>
 
       <div class="col-md-4">
-        <h2>Heading</h2>
-        <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+        <h2> FAKE Heading</h2>
+        <p>The previous column is false</p>
         <p><a class="btn btn-default" href="#" role="button">View details »</a></p>
       </div>
 
