--- a/index.html
+++ b/index.html
@@ -81,10 +81,11 @@
     </div>
 
     <hr>
-    <div>
-      <p>dwfaefdfa</p>
 
-
+    <div class="row">
+      <div class="col-md-4">
+        <p>dwfaefdfa</p>
+      </div>
     </div>
 
     <footer class="text-center">
