--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
     <!-- Example row of columns -->
     <div class="row">
       <div class="col-md-4">
-        <h2>About me</h2>
+        <h2>Not About me</h2>
         <img>
-        <p>LOLOLLOLLOLLLLLOL </p>
+        <p>Eveyone lies</p>
         <p><a class="btn btn-default" href="#" role="button">View details »</a></p>
       </div>
 
@@ -85,6 +85,10 @@
     <div class="row">
       <div class="col-md-4">
         <p>dwfaefdfa</p>
+      </div>
+
+      <div class="col-md-4">
+        <p><img src="DOGGY2.svg" alt="NOOOOO" > </p>
       </div>
     </div>
 
