--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
 
       <div class="col-md-12">
-        <p><img src="DOGGY2.svg" alt="NOOOOO" ></p>
+        <p><img src="DOGGY2.svg" alt="NOOOOO" align="middle"></p>
       </div>
     </div>
 
