--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
     <footer class="text-center">
       <p><a href="http://facebook.com/"><i class="fa fa-facebook fa-2x"></i></a></p>
-      <p>© 2016 Company, Inc.</p>
+      <p>© 2017 MEGADEATH Inc.</p>
     </footer>
 
   </div>  <!-- /container -->
