--- a/index.html
+++ b/index.html
@@ -83,12 +83,14 @@
     <hr>
 
     <div class="row">
-
-
       <div class="col-md-12">
         <p><img src="../img/DOGGY2.svg" alt="NOOOOO"class="img-responsive center-block"></p>
       </div>
     </div>
+    
+    <div class="row">
+      <div class="col-md-12">
+        <img src="../img/qafd67.png" alt="NOOOOO NOT AGAIN!"class="img-responsive center-block">
 
     <footer class="text-center">
       <p><a href="http://facebook.com/"><i class="fa fa-facebook fa-2x"></i></a></p>
