--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@
     <div class="row">
       <div class="col-md-12">
         <img src="../img/qafd67.png" alt="NOOOOO NOT AGAIN!"class="img-responsive center-block">
+      </div>
+    </div>
 
     <footer class="text-center">
       <p><a href="http://facebook.com/"><i class="fa fa-facebook fa-2x"></i></a></p>
