--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     
     <div class="row">
       <div class="col-md-12">
-        <img src="../img/qafd67.png" alt="NOOOOO NOT AGAIN!"class="img-responsive center-block">
+        <p><img src="../img/qafd67.png" alt="NOOOOO NOT AGAIN!"class="img-responsive center-block"></p>
       </div>
     </div>
 
