--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
     <div class="row">
       <div class="col-md-12">
-        <p><img src=".../img/DOGGY2.svg" alt="NOOOOO"class="img-responsive center-block"></p>
+        <p><img src="../img/DOGGY2.svg" alt="NOOOOO"class="img-responsive center-block"></p>
       </div>
     </div>
     
