tring to fix img

--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
       </div>
       
       <div class="col-md-6">
-        <p><img class="img-responsive center-block" src=""
+        <p><img class="img-responsive center-block" src="https://raw.githubusercontent.com/janselmo/sig/master/img/qafd67.png" alt="nononon"></p>
+      </div>
     </div>
 
 
