--- a/index.html
+++ b/index.html
@@ -60,7 +60,6 @@
     <div class="row">
       <div class="col-md-4">
         <h2>Not About me</h2>
-        <img>
         <p>Eveyone lies</p>
         <p><a class="btn btn-default" href="#" role="button">View details »</a></p>
       </div>
@@ -88,7 +87,8 @@
       </div>
       
       <div class="col-md-6">
-        <p><img class="img-responsive center-block" src="https://raw.githubusercontent.com/janselmo/sig/master/img/qafd67.png" alt="nononon"></p>
+        <p><img class="img-responsive center-block" src="https://raw.githubusercontent.com/janselmo/sig/master/img/qafd67.png" alt="nononon">
+        https://validator.w3.org/nu/#textarea</p>
       </div>
     </div>
 
