--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       
       <div class="col-md-6">
         <p><img class="img-responsive center-block" src="https://raw.githubusercontent.com/janselmo/sig/master/img/qafd67.png" alt="nononon">
-        </p>
+        <img class="img-responsive center-block" src="https://raw.githubusercontent.com/janselmo/sig/master/img/Screen%20Shot%202017-09-08%20at%202.33.35%20PM.png" alt="NUNG!!"></p>
       </div>
     </div>
 
