--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
     <footer class="text-center">
       <p><a href="http://facebook.com/"><i class="fa fa-facebook fa-2x"></i></a></p>
-      <p>© 2017 MEGADEATH Inc.</p>
+      <p>© 2017 LOS SELMO'S Inc.</p>
     </footer>
 
   </div>  <!-- /container -->
