--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <h2> FAKE Heading</h2>
         <p>The previous column is false
         <br>
-        <img class="img-responsive center-block" src="https://github.com/janselmo/sig/blob/master/img/logoSquare.png?raw=true" alt="NUNG2!!"></p>
+        lollolololol</p>
         <p><a class="btn btn-default" href="#" role="button">View details »</a></p>
       </div>
 
