still on the favicon

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
   
   <div class="row">
     <div class="col-md-12">
-      <a href="https://janselmo.github.io/sig/" target="_blank"><img class="img-responsive" src="https://github.com/janselmo/sig/blob/master/img/favicon-32x32.png?raw=true" alt="NOOOOO">HAHA Favicon</a>
+      <p><a href="https://janselmo.github.io/sig/" target="_blank"><img class="img-responsive" src="https://github.com/janselmo/sig/blob/master/img/favicon-32x32.png?raw=true" alt="NOOOOO">HAHA Favicon</a></p>
     </div>
   </div>
 
