--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
   <!-- Link to Font Awesome http://fontawesome.io/ -->
 <!--   <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
   <!-- favicon - ref: http://stackoverflow.com/questions/25952907/favicon-ico-vs-link-rel-shortcut-icon -->
-<!--   <link rel="shortcut icon" href="/path/to/icons/favicon.ico">
+  <link rel="shortcut icon" href="/path/to/icons/favicon.ico">
   <link rel="icon" type="image/png" href="/path/to/icons/favicon-192x192.png" sizes="192x192">
-  <link rel="apple-touch-icon" sizes="180x180" href="/path/to/icons/apple-touch-icon-180x180.png"> -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/path/to/icons/apple-touch-icon-180x180.png"> 
 
 </head>
 
@@ -98,7 +98,7 @@
  <hr>
   
   <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-4">
       <p><a href="https://janselmo.github.io/sig/" target="_blank"><img class="img-responsive" src="https://github.com/janselmo/sig/blob/master/img/favicon-32x32.png?raw=true" alt="NOOOOO">HAHA Favicon</a></p>
     </div>
   </div>
